# career_caddy_automation

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  secrets.yml.example  todo.org
deploy/pibu/: README.md  caddy-runner.service  install.sh
lib/: observability.py  trace_dedupe.py  trace_inbox.py  trace_observability.py
lib/browser/: credentials.py  firefox_cookies.py  session_store.py
mcp_servers/: agents_gateway.py  browser_server.py  email_clean.py  email_server.py
scripts/: analyze_screenshots.py  discover_sites.py  hold_poller.py  inbox_triage.py  manual_login.py  process_tagged.py  publish_from_csv.py  score_posts.py  sharpen_profiles.py  tag_emails.py  trace_email.py
src/: config.py  db.py
src/agents/: a2a_orchestrator.py  agent_factory.py  caddy_poster.py  email_agents.py  history.py  html_fetchers.py  job_extractor.py  screenshot_analyzer.py  selector_grounder.py  span_validator.py  url_extractor.py  usage_reporter.py
src/client/: __init__.py  api_client.py  models.py  toolset.py
src/email_source/: __init__.py  html_render.py  imap_source.py  mime.py  notmuch_source.py
src/observability/: __init__.py  forward_audit.py  mongo_client.py  triage_store.py
src/pipelines/: email_to_caddy.py  url_to_caddy.py  web_ui.py
src/pollers/: __init__.py  email_catchall.py
tests/: conftest.py  test_api_client_complete_flag.py  test_api_client_create_scrape.py  test_api_client_find_duplicate_candidates.py  test_api_client_forward_provenance.py  test_api_client_nanoid_ids.py  test_api_client_profile_readiness.py  test_api_client_user_resolver.py  test_config_and_file_log.py  test_email_catchall_processor.py  test_imap_source_catchall_parser.py  test_inbox_triage_auto_scrape.py  test_inbox_triage_forward_dedupe.py  test_inbox_triage_forward_path.py  test_inbox_triage_introspection.py  test_inbox_triage_known_good_autoscrape.py  test_inbox_triage_loop.py  test_load_email_text_render.py  test_mime_extract_bodies.py  test_mime_extract_recipient.py  test_notmuch_source_message_tags.py  test_notmuch_source_scope.py  test_observability_forward_audit.py  test_observability_triage.py  test_span_validator.py
tests/fixtures/emails/: indeed_alert_singlejob.txt  linkedin_digest_5jobs.txt  ziprecruiter_km_tracker.txt
