[project]
name = "career-caddy-automation"
version = "0.1.0"
description = "Standalone automation toolkit for Career Caddy — scrape job postings, classify emails, and manage applications via the Career Caddy API or MCP endpoint."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
    "rich<14",
    "logfire",
    "pyyaml",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
    "camoufox>=0.4.11",
    "beautifulsoup4",
    "html2text",
]
email = [
    "fastmcp>=3.0.0,<4",
]
ollama = [
    "pydanticai-ollama",
]
a2a = [
    "fasta2a",
    "uvicorn[standard]>=0.24.0",
]
all = [
    "career-caddy-automation[browser,email,ollama,a2a]",
]

[project.scripts]
caddy-url      = "src.pipelines.url_to_caddy:run"
caddy-email    = "src.pipelines.email_to_caddy:run"
caddy-classify = "scripts.tag_emails:run"
caddy-web          = "src.pipelines.web_ui:main"
caddy-orchestrator = "src.agents.a2a_orchestrator:run"
caddy-gateway      = "mcp_servers.agents_gateway:main"
caddy-process      = "scripts.process_tagged:run"
caddy-login        = "scripts.manual_login:run"
caddy-poller       = "scripts.hold_poller:run"
caddy-discover     = "scripts.discover_sites:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "lib", "mcp_servers", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
