[project]
name = "career-caddy-automation"
version = "0.1.0"
description = "Standalone automation toolkit for Career Caddy — scrape job postings, classify emails, and manage applications via the Career Caddy API or MCP endpoint."
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
    "rich<14",
    "logfire",
    "pyyaml",
    "fastmcp>=3.0.0,<4",
    "html2text",
    "beautifulsoup4",
    "pymongo>=4.6",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
    "camoufox>=0.4.11",
]
ollama = [
    "pydanticai-ollama",
]
a2a = [
    "fasta2a",
    "uvicorn[standard]>=0.24.0",
]
imap = [
    "aioimaplib",
]
all = [
    "career-caddy-automation[browser,ollama,a2a,imap]",
]

[project.scripts]
caddy-url      = "src.pipelines.url_to_caddy:run"
caddy-email    = "src.pipelines.email_to_caddy:run"
caddy-classify = "scripts.tag_emails:run"
caddy-inbox    = "scripts.inbox_triage:run"
caddy-catchall = "src.pollers.email_catchall:run"
caddy-web          = "src.pipelines.web_ui:main"
caddy-orchestrator = "src.agents.a2a_orchestrator:run"
caddy-gateway      = "mcp_servers.agents_gateway:main"
caddy-process      = "scripts.process_tagged:run"
caddy-score        = "scripts.score_posts:run"
# caddy-login / caddy-poller / caddy-discover removed — canonical
# implementations now live in the career_caddy parent at
# agents/tools/{manual_login,discover_sites}.py and agents/pollers/hold_poller.py.
# Use `make poller-local` (parent) or run them directly from agents/.
caddy-analyze-screenshots = "scripts.analyze_screenshots:run"

[tool.hatch.build.targets.wheel]
packages = ["src", "lib", "mcp_servers", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line length — let the formatter handle it
    "B008",  # function call in default arg — common pydantic Field() pattern
]

[tool.ruff.lint.per-file-ignores]
# configure_logfire() must run before other imports by design
"scripts/*" = ["E402"]
"mcp_servers/*" = ["E402"]
"src/pipelines/*" = ["E402"]
"src/pollers/*" = ["E402"]
"src/agents/a2a_orchestrator.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
